@@ -2,6 +2,7 @@ package com.e2i1.linkeepserver.domain.collections.business;
 
 import com.e2i1.linkeepserver.common.annotation.Business;
 import com.e2i1.linkeepserver.domain.collaborators.converter.CollaboratorsConverter;
+import com.e2i1.linkeepserver.domain.collaborators.dto.CollaboratorResDTO;
 import com.e2i1.linkeepserver.domain.collaborators.entity.CollaboratorsEntity;
 import com.e2i1.linkeepserver.domain.collaborators.entity.Role;
 import com.e2i1.linkeepserver.domain.collaborators.service.CollaboratorsService;
@@ -13,6 +14,9 @@ import com.e2i1.linkeepserver.domain.collections.dto.CollectionTitleResDTO;
 import com.e2i1.linkeepserver.domain.collections.dto.CollectionUserResDTO;
 import com.e2i1.linkeepserver.domain.collections.entity.CollectionsEntity;
 import com.e2i1.linkeepserver.domain.collections.service.CollectionsService;
+import com.e2i1.linkeepserver.domain.likeothers.converter.LikeOthersConverter;
+import com.e2i1.linkeepserver.domain.likeothers.entity.LikeOthersEntity;
+import com.e2i1.linkeepserver.domain.likeothers.service.LikeOthersService;
 import com.e2i1.linkeepserver.domain.links.converter.LinksConverter;
 import com.e2i1.linkeepserver.domain.links.entity.LinksEntity;
 import com.e2i1.linkeepserver.domain.links.service.LinksService;
@@ -20,6 +24,8 @@ import com.e2i1.linkeepserver.domain.tags.converter.TagsConverter;
 import com.e2i1.linkeepserver.domain.tags.entity.TagsEntity;
 import com.e2i1.linkeepserver.domain.tags.service.TagsService;
 import com.e2i1.linkeepserver.domain.users.entity.UsersEntity;
+import com.e2i1.linkeepserver.domain.users.service.UsersService;
+import java.util.Optional;
 import lombok.RequiredArgsConstructor;
 
 import java.util.ArrayList;
@@ -39,23 +45,35 @@ public class CollectionsBusiness {
   private final CollaboratorsService collaboratorsService;
   private final CollaboratorsConverter collaboratorsConverter;
   private final TagsConverter tagsConverter;
+  private final UsersService usersService;
+  private final LikeOthersService likeOthersService;
+  private final LikeOthersConverter likeOthersConverter;
 
-  public CollectionUserResDTO getCollection(Long id) {
+  public CollectionUserResDTO getCollection(Long id, UsersEntity user) {
     CollectionsEntity collection = collectionsService.findByIdWithThrow(id);
     List<LinksEntity> linkList = linksService.findByCollections(collection);
     List<CollectionLinkDTO> linkDTOList = linkList.stream().map(linksConverter::toCollectionLinkDTO)
         .toList();
+    boolean isLike = likeOthersService.getIsLike(collection, user);
     List<TagsEntity> tagList = tagsService.findByCollection(collection);
     List<String> tagDTOList = tagList.stream().map(TagsEntity::getTagName)
         .collect(Collectors.toList());
     CollectionUserResDTO result = collectionsConverter.toCollectionUserResDTO(collection,
-        linkDTOList, tagDTOList);
+        linkDTOList, tagDTOList,isLike);
     return result;
   }
   public List<CollectionResDTO> getUserCollection(UsersEntity user){
     List<CollectionsEntity> collectionList = collaboratorsService.findCollectionByUser(user);
 
-    return collectionList.stream().map(collectionsConverter::toCollectionResDTO).toList();
+    return collectionList.stream().map(collectionsEntity -> {
+      List<String> tagList = tagsService.findTagNameByCollection(collectionsEntity);
+      List<CollaboratorsEntity> collaboratorList = collaboratorsService.findByCollection(collectionsEntity);
+      List<CollaboratorResDTO> collaboratorRoleList = collaboratorList.stream().map(collaborators -> {
+        return collaboratorsConverter.toCollaboratorResDTO(collaborators, collaborators.getUser());
+      }).toList();
+      boolean isLike = likeOthersService.getIsLike(collectionsEntity,user);
+      return collectionsConverter.toCollectionResDTO(collectionsEntity,isLike,tagList,collaboratorRoleList);
+    }).collect(Collectors.toList());
   }
 
   public List<CollectionTitleResDTO> getTitle(UsersEntity user){
@@ -65,9 +83,12 @@ public class CollectionsBusiness {
   }
 
   @Transactional
-  public Long updateNumOfLikes(Long id){
-    CollectionsEntity collection = collectionsService.findByIdWithThrow(id);
+  public Long updateNumOfLikes(Long collectionId,UsersEntity user){
+    CollectionsEntity collection = collectionsService.findByIdWithThrow(collectionId);
+    LikeOthersEntity likeOther = likeOthersConverter.toLikeOthersEntity(collection,user);
+    likeOthersService.updateLike(likeOther);
     collection.updateLikes();
+
     return collection.getNumOfLikes();
   }
 
@@ -79,7 +100,8 @@ public class CollectionsBusiness {
     CollaboratorsEntity owner = collaboratorsConverter.toEntity(collection,user, Role.OWNER);
     collaboratorsService.insert(owner);
     for(Long userId : req.getCollaborators()){
-      CollaboratorsEntity coworker = collaboratorsConverter.toEntity(collection,user, Role.COWORKER);
+      UsersEntity collaborator = usersService.findById(userId);
+      CollaboratorsEntity coworker = collaboratorsConverter.toEntity(collection,collaborator, Role.COWORKER);
       collaboratorsService.insert(coworker);
     }
 
@@ -88,5 +110,19 @@ public class CollectionsBusiness {
       tagsService.insert(tag);
     }
 
+  }
+
+  public List<CollectionResDTO> getUserLikeCollection(UsersEntity user) {
+    List<CollectionsEntity> collectionList = likeOthersService.findCollectionByUser(user);
+
+    return collectionList.stream().map(collectionsEntity -> {
+      List<String> tagList = tagsService.findTagNameByCollection(collectionsEntity);
+      List<CollaboratorsEntity> collaboratorList = collaboratorsService.findByCollection(collectionsEntity);
+      List<CollaboratorResDTO> collaboratorRoleList = collaboratorList.stream().map(collaborators -> {
+        return collaboratorsConverter.toCollaboratorResDTO(collaborators, collaborators.getUser());
+      }).toList();
+      boolean isLike = likeOthersService.getIsLike(collectionsEntity,user);
+      return collectionsConverter.toCollectionResDTO(collectionsEntity,isLike,tagList,collaboratorRoleList);
+    }).collect(Collectors.toList());
   }
 }
